--- a/pages/countries/Countries.module.scss
+++ b/pages/countries/Countries.module.scss
@@ -3,6 +3,9 @@
   .title {
     display: flex;
     align-items: center;
+    @media screen and (max-width: 560px){
+      display: block;
+    }
     .span {
       margin-left: 10px;
       font-size: 30px;
@@ -11,6 +14,10 @@
       margin-left: 30px;
       display: flex;
       align-items: center;
+      @media screen and (max-width: 560px){
+        display: block;
+        margin-top: 20px;
+      }
       .input {
         border: 1px solid #dedede;
         padding: 5px;
